Exceptions logged to the JS console should use toString(). https://bugs.webkit.org/show_bug.cgi?id=159855

Reviewed by Darin Adler.

No new tests (No change in behavior).

* bindings/js/JSDOMBinding.cpp:
(WebCore::reportException):

* dom/DOMCoreException.h:
(WebCore::DOMCoreException::DOMCoreException):

* dom/ExceptionBase.cpp:
(WebCore::ExceptionBase::ExceptionBase):
(WebCore::ExceptionBase::toString):
(WebCore::ExceptionBase::consoleErrorMessage): Deleted.
* dom/ExceptionBase.h:
(WebCore::ExceptionBase::description): Deleted.

* svg/SVGException.h:

* xml/XPathException.h:
(WebCore::XPathException::XPathException):

Canonical link: https://commits.webkit.org/178024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203334 268f45cc-cd09-0410-ab3c-d52691b4dbfc