Source/WebCore/dom/DOMCoreException.h
@@ -44,7 +44,7 @@ public:
 
 protected:
     explicit DOMCoreException(const ExceptionCodeDescription& description)
-        : ExceptionBase(description, ExceptionBase::MessageSource::UseDescription)
+        : ExceptionBase(description)
     {
     }
 };
