Source/WebCore/dom/ExceptionBase.h
@@ -42,28 +42,18 @@ public:
     unsigned short code() const { return m_code; }
     String name() const { return m_name; }
     String message() const { return m_message; }
-    String description() const { return m_description; }
 
     String toString() const;
 
-    // FIXME: consoleErrorMessage is needed temporarily while bug 159822 is in progress.
-    // Once 159822 is complete, consoleErrorMessage can be dropped and its callers will use toString instead.
-    String consoleErrorMessage() const;
-
 protected:
-    enum class MessageSource {
-        ConstructMessage,
-        UseDescription,
-    };
-    explicit ExceptionBase(const ExceptionCodeDescription&, MessageSource = MessageSource::ConstructMessage);
+    explicit ExceptionBase(const ExceptionCodeDescription&);
 
 private:
     unsigned short m_code;
     String m_name;
     String m_message;
-    String m_description;
     String m_typeName;
-    MessageSource m_messageSource;
+    mutable String m_toString;
 };
 
 } // namespace WebCore
